@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,7 +20,6 @@ import java.nio.CharBuffer;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -64,7 +63,7 @@ public final class StringDecoder extends AbstractDataBufferDecoder<String> {
 	public static final Charset DEFAULT_CHARSET = StandardCharsets.UTF_8;
 
 	/** The default delimiter strings to use, i.e. {@code \r\n} and {@code \n}. */
-	public static final List<String> DEFAULT_DELIMITERS = Arrays.asList("\r\n", "\n");
+	public static final List<String> DEFAULT_DELIMITERS = List.of("\r\n", "\n");
 
 
 	private final List<String> delimiters;
@@ -157,16 +156,20 @@ public final class StringDecoder extends AbstractDataBufferDecoder<String> {
 				int startIndex = buffer.readPosition();
 				int length = (endIndex - startIndex + 1);
 				DataBuffer slice = buffer.retainedSlice(startIndex, length);
-				if (this.stripDelimiter) {
-					slice.writePosition(slice.writePosition() - matcher.delimiter().length);
-				}
 				result = (result != null ? result : new ArrayList<>());
 				if (chunks.isEmpty()) {
+					if (this.stripDelimiter) {
+						slice.writePosition(slice.writePosition() - matcher.delimiter().length);
+					}
 					result.add(slice);
 				}
 				else {
 					chunks.add(slice);
-					result.add(buffer.factory().join(chunks));
+					DataBuffer joined = buffer.factory().join(chunks);
+					if (this.stripDelimiter) {
+						joined.writePosition(joined.writePosition() - matcher.delimiter().length);
+					}
+					result.add(joined);
 					chunks.clear();
 				}
 				buffer.readPosition(endIndex + 1);
@@ -205,17 +208,6 @@ public final class StringDecoder extends AbstractDataBufferDecoder<String> {
 
 	/**
 	 * Create a {@code StringDecoder} for {@code "text/plain"}.
-	 * @param stripDelimiter this flag is ignored
-	 * @deprecated as of Spring 5.0.4, in favor of {@link #textPlainOnly()} or
-	 * {@link #textPlainOnly(List, boolean)}
-	 */
-	@Deprecated
-	public static StringDecoder textPlainOnly(boolean stripDelimiter) {
-		return textPlainOnly();
-	}
-
-	/**
-	 * Create a {@code StringDecoder} for {@code "text/plain"}.
 	 */
 	public static StringDecoder textPlainOnly() {
 		return textPlainOnly(DEFAULT_DELIMITERS, true);
@@ -229,17 +221,6 @@ public final class StringDecoder extends AbstractDataBufferDecoder<String> {
 	 */
 	public static StringDecoder textPlainOnly(List<String> delimiters, boolean stripDelimiter) {
 		return new StringDecoder(delimiters, stripDelimiter, new MimeType("text", "plain", DEFAULT_CHARSET));
-	}
-
-	/**
-	 * Create a {@code StringDecoder} that supports all MIME types.
-	 * @param stripDelimiter this flag is ignored
-	 * @deprecated as of Spring 5.0.4, in favor of {@link #allMimeTypes()} or
-	 * {@link #allMimeTypes(List, boolean)}
-	 */
-	@Deprecated
-	public static StringDecoder allMimeTypes(boolean stripDelimiter) {
-		return allMimeTypes();
 	}
 
 	/**
